--- a/S5E01.html
+++ b/S5E01.html
@@ -79,6 +79,8 @@ var x = setInterval(function() {
         </section>
          <section>
         <p style="font-size: 25px; font-family: fantasy; ">Synopsis</p>
+             <p style="font-size="30px; font-family:cursive;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
+                 return to a vulnerable Ladybug and Cat Noir to Capture there Miraculous.</p>
         <br>
         </section>
         <section id="Spoiler2">
