Synopsis Added to Latest News

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@ var x = setInterval(function() {
 </script>
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p>First Trailer: Uploaded by <a href="https://www.youtube.com/user/MundoGloob">Gloob. </a></p>
-            <video controls>
-    <source src="TRAILER%20EPIS%C3%93DIO%20IN%C3%89DITO%20EVOLU%C3%87%C3%83O%20(EVOLUTION)!%20PR%C3%89-ESTREIA%20MIRACULOUS%205%C2%AA%20TEMPORADA%20Mundo%20Gloob.mp4">
-        </video>
+        <p>Synopsis</p>
+             <p style="font-size="30px; font-family:cursive;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
+                 return to a vulnerable Ladybug and Cat Noir to Capture there Miraculous.</p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
     
