--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ var x = setInterval(function() {
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
         <p>Synopsis</p>
-             <p style="font-size="30px; font-family:cursive;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
+             <p style="font-size="30px; font-family:cursive; color:purple;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
                  return to a vulnerable Ladybug and Cat Noir to Capture there Miraculous.</p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
