--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ var x = setInterval(function() {
 </script>
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p>Synopsis</p>
+        <p style="font-size="30px; font-family:cursive; color:orange;>Synopsis</p>
              <p style="font-size="30px; font-family:cursive; color:purple;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
                  return to a vulnerable Ladybug and Cat Noir to Capture there Miraculous.</p>
         </section>
