--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@ var x = setInterval(function() {
 </script>
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p style="font-size="30px; font-family:cursive; color:orange;>Synopsis</p>
-             <p style="font-size="30px; font-family:cursive; color:purple;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
-                 return to a vulnerable Ladybug and Cat Noir to Capture there Miraculous.</p>
+        <p style="color: orange; font-size: 30px; font-family: cursive;"></p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">After stealing the Miraculous box, Hawk Moth turns Monarch and uses the Rabbit Miraculous to return to a vulnerable Ladybug and Cat Noir moment in the past to capture their Miraculous.</p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
     
