--- a/S5E01.html
+++ b/S5E01.html
@@ -78,9 +78,8 @@ var x = setInterval(function() {
         <p>13 June 2022 (Gloob) 19:30 Brazil Time:</p>
         </section>
          <section>
-        <p style="font-size: 25px; font-family: fantasy; ">Synopsis</p>
-             <p style="font-size="30px; font-family:cursive;>After Stealing All the Miraculous Hawk Moth Turns into Monarch <br> and uses the rabbit Miraculous to 
-                 return to a vulnerable Ladybug and Cat Noir to Capture there Miraculous.</p>
+        <p style="color: orange; font-size: 30px; font-family: cursive;"></p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">After stealing the Miraculous box, Hawk Moth turns Monarch and uses the Rabbit Miraculous to return to a vulnerable Ladybug and Cat Noir moment in the past to capture their Miraculous.</p>
         <br>
         </section>
         <section id="Spoiler2">
