--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ var x = setInterval(function() {
 </script>
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p style="color: orange; font-size: 30px; font-family: cursive;"></p>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
         <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">After stealing the Miraculous box, Hawk Moth turns Monarch and uses the Rabbit Miraculous to return to a vulnerable Ladybug and Cat Noir moment in the past to capture their Miraculous.</p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
