--- a/S5E02.html
+++ b/S5E02.html
@@ -15,6 +15,21 @@
     </head>
 <body>
     <h1 style="color:white; font-size: 55px ">Multiplication</h1>
+     <section>
+        <h2 id="FirstTrailer"> First Trailer:</h2>
+            <video controls>
+    <source src="MultipTrailer">
+        </video>
+        </section>
+    <section id="Spoiler1">
+        <h2>Release Date:</h2>
+        <p>20 June 2022 (Gloob) 19:30 Brazil Time:</p>
+        </section>
+         <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"></p>
+        <br>
+        </section>
     
     
 <a href="Index.html">Back to Home</a>    
