--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@ var x = setInterval(function() {
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
         <p style="color: orange; font-size: 30px; font-family: cursive;">1st Multiplication See</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Gloob released the 1st minute of <a href="MultipTrailer.mp4></a>Evolution</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Gloob released the 1st minute of Multiplication:
+         <video controls>
+    <source src="MultipTrailer.mp4">
+        </video></p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
     
