--- a/S5E02.html
+++ b/S5E02.html
@@ -11,6 +11,13 @@
             color: red;
             font-weight: bold;
         }
+                #FirstTrailer{
+            color: rebeccapurple;
+            font-size: 35px;
+        }
+        video{
+            width: 425px;
+        }
     </style>
     </head>
 <body>
