Multiplication Synopsis Added

--- a/index.html
+++ b/index.html
@@ -60,11 +60,9 @@ var x = setInterval(function() {
 </script>
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p style="color: orange; font-size: 30px; font-family: cursive;">1st Multiplication See</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Gloob released the 1st minute of Multiplication:
-         <video controls>
-    <source src="MultipTrailer.mp4">
-        </video></p>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Multiplication Synopsis:</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">When Marinette becomes convinced that her fealings for Adrien caused her defeat against Monarch as Ladybug, she decides to give up on her love for the young school boy. Besides, as Ladybug, she's getting ready to fight a more powerful than ever Monarch, with Cat Noir's help. But as the days go by, not a single Akuma shows up to torment Paris. Could Monarch possibly have given up?
+         </p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
     
