--- a/S5E02.html
+++ b/S5E02.html
@@ -67,7 +67,7 @@ var x = setInterval(function() {
         </section>
          <section>
         <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"></p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">When Marinette becomes convinced that her fealings for Adrien caused her defeat against Monarch as Ladybug, she decides to give up on her love for the young school boy. Besides, as Ladybug, she's getting ready to fight a more powerful than ever Monarch, with Cat Noir's help. But as the days go by, not a single Akuma shows up to torment Paris. Could Monarch possibly have given up?</p>
         <br>
         </section>
     
