Timer Bug Fixed

--- a/S5E02.html
+++ b/S5E02.html
@@ -26,7 +26,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jun 13, 2022 23:30:00").getTime();
+var countDownDate = new Date("Jun 20, 2022 23:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -50,7 +50,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "Aired";
   }
 }, 1000);
 </script>
