--- a/S5E02.html
+++ b/S5E02.html
@@ -18,6 +18,11 @@
         video{
             width: 425px;
         }
+        #ReleaseDate{
+            color:red;
+            font-size:40px;
+            font-family:inherit
+        }
     </style>
     </head>
 <body>
@@ -62,7 +67,7 @@ var x = setInterval(function() {
         </video>
         </section>
     <section id="Spoiler1">
-        <h2>Release Date:</h2>
+        <h2 id="ReleaseDate">Release Date:</h2>
         <p>20 June 2022 (Gloob) 19:30 Brazil Time:</p>
         </section>
          <section>
