--- a/S5E02.html
+++ b/S5E02.html
@@ -67,8 +67,8 @@ var x = setInterval(function() {
         </video>
         </section>
     <section id="Spoiler1">
-        <h2 id="ReleaseDate">Release Date:</h2>
-        <p>20 June 2022 (Gloob) 19:30 Brazil Time:</p>
+        <h2 >Release Date:</h2>
+        <p id="ReleaseDate">20 June 2022 (Gloob) 19:30 Brazil Time:</p>
         </section>
          <section>
         <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
