--- a/S5E02.html
+++ b/S5E02.html
@@ -19,6 +19,11 @@
             width: 425px;
         }
         #ReleaseDate{
+            color:orange;
+            font-size:40px;
+            font-family:inherit
+        }
+        #ReleaseDate1{
             color:red;
             font-size:40px;
             font-family:inherit
@@ -67,7 +72,7 @@ var x = setInterval(function() {
         </video>
         </section>
     <section id="Spoiler1">
-        <h2 >Release Date:</h2>
+        <h2 id="ReleaseDate1">Release Date:</h2>
         <p id="ReleaseDate">20 June 2022 (Gloob) 19:30 Brazil Time:</p>
         </section>
          <section>
