--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ background-color: aqua;
         font-size: 35px;
         text-align: center;
     }
-
+    </style>
+    </head>
 <body>
 <h1> Updating Be Up Soon</h1>
 </body>
