--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@ body{
 background-color: aqua;
 }
     h1{
-        font-size: 35px;
+        font-size: 59px;
         text-align: center;
+        font-family: fantasy;
+        color: yellow
     }
     </style>
     </head>
 <body>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <h1> Updating Be Up Soon</h1>
 </body>
     </html>
