--- a/S5E04.html
+++ b/S5E04.html
@@ -11,6 +11,10 @@
             color: skyblue;
             font-weight: bold;
         }
+        #Spoiler1{
+text-align: left;
+            font-size: 35px;
+        }
         </style>
     </head>
 <body>
@@ -51,6 +55,12 @@ var x = setInterval(function() {
 font-size: 55px ">Jubilation
 </h1>
     
+<section id="Spoiler1">
+        <h2>Release Date:</h2>
+        <p>13 June 2022 (Gloob) 19:30 Brazil Time:</p>
+        </section>
+    <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Marinette is surprised to discover that a former schoolmate, Socqueline, is passing herself off as Ladybug. She tries to dissuade her from endangering herself this way, but Monarch comes after Socqueline, convinced that she is the real Ladybug.</p>
     
 <a href="Index.html">Back to Home</a>    
     </body>
