--- a/S5E04.html
+++ b/S5E04.html
@@ -62,6 +62,8 @@ font-size: 55px ">Jubilation
     <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
         <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Marinette is surprised to discover that a former schoolmate, Socqueline, is passing herself off as Ladybug. She tries to dissuade her from endangering herself this way, but Monarch comes after Socqueline, convinced that she is the real Ladybug.</p>
     
+    <h4>Latest News</h4>
+    <img src="MarinetteFakeLadybug.png">
 <a href="Index.html">Back to Home</a>    
     </body>
 </html>
