--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ var x = setInterval(function() {
     <img src="hehhehehehehehehe.jpg" id="smallpictofillgap">
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Jubilation Synopsis:</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Marinette is surprised to discover that a former schoolmate, Socqueline, is passing herself off as Ladybug. She tries to dissuade her from endangering herself this way, but Monarch comes after Socqueline, convinced that she is the real Ladybug</a>
+        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Illusion Teaser</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Click for Trailer</a>
          </p>
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
