--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ var x = setInterval(function() {
     <a href="S5E26.html" id="E26"><img src="Tikki_Square.webp" width="250px" height="255px"></a>
     
     <a href="S5E27.html" id="E27"><img src="action.jpg" width="250px" height="255px"> </a>
+    
+    <a href="Game/RiseOfTheSphinx.html" id="E20"><img src="Game/Indexlogo.jpg" width="250px" height="255px"></a>
     <br><br>
     <p style="font-size: 1px">Created By Alfrado 2022</p>
     </body>
