--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@ var x = setInterval(function() {
     <img src="hehhehehehehehehe.jpg" id="smallpictofillgap">
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Illusion Teaser</p>
+        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Game Teaser</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Click for Trailer</a>
+         </p>
+        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Determmination Teaser</p>
         <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Click for Trailer</a>
          </p>
         </section>
