--- a/Game/RiseOfTheSphinx.html
+++ b/Game/RiseOfTheSphinx.html
@@ -58,6 +58,10 @@ var x = setInterval(function() {
 }, 1000);
 </script>
     <h2 style="font-size: 25px; color:chocolate">Latest News:</h2>
+    <video controls autoplay>
+    <source src="Trailer1.mp4" >
+    
+    </video>
     <img src="FuCirtains.png" style="height: 320px" width="600px" >
     <img src="FuFull.png" style="height: 320px" width="600px">
     <img src="PlayerStats.png" style="height: 320px" width="600px">
