--- a/S5E06.html
+++ b/S5E06.html
@@ -50,7 +50,11 @@ var x = setInterval(function() {
 ;
 font-size: 55px ">Determination
 </h1>
+ <h2 style="font-size: 25px; color:chocolate">Trailer:</h2>
+    <video controls autoplay>
+    <source src="DeterminationTrailer1.mp4" >
     
+    </video>
     
 <a href="Index.html">Back to Home</a>    
     </body>
