--- a/S5E07.html
+++ b/S5E07.html
@@ -50,7 +50,10 @@ var x = setInterval(function() {
 ;
 font-size: 55px ">Passion
 </h1>
-    
+    <h3>Trailer:</h3>
+    <video controls autoplay>
+    <source src="PassionTrailer1.mp4">
+    </video>
     
 <a href="Index.html">Back to Home</a>    
     </body>
