--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
   <a href="datethingy.html">Calendar</a>
   <a href="MyTheories.html">My Theories</a>
 </div> 
-    <h2 style="color: blue">Destruction Countdown English Dub:</h2>
+    <h2 style="color: blue">Jubilation Countdown Gloob:</h2>
      <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Oct 22, 2022 23:30:00").getTime();
+var countDownDate = new Date("Oct 24, 2022 23:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -101,12 +101,10 @@ var x = setInterval(function() {
     <img src="hehhehehehehehehe.jpg" id="smallpictofillgap">
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Game Teaser</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Click for Trailer</a>
+        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Passion Teaser</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="S5E07.html">Click for Trailer</a>
          </p>
-        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Determmination Teaser</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Click for Trailer</a>
-         </p>
+        
         </section>
     <h1 style="color: deepskyblue; font-family: fantasy">Miraculous: Season 5 Countdown and Updates:</h1>
     
