--- a/datethingy.html
+++ b/datethingy.html
@@ -43,7 +43,7 @@
     <div class="topnav">
   <a href="index.html">Home</a>
   <a class="active" href="datethingy.html">Calendar</a>
-  <a class="active" href="MyTheories.html">My Theories</a>
+  <a href="MyTheories.html">My Theories</a>
 </div>
     
    <div class="hero">
