--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
   <a href="datethingy.html">Calendar</a>
   <a href="MyTheories.html">My Theories</a>
 </div> 
-    <h2 style="color: blue">Jubilation Countdown Gloob:</h2>
+    <h2 style="color: blue">Determination Countdown TF1:</h2>
      <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Oct 24, 2022 23:30:00").getTime();
+var countDownDate = new Date("Oct 28, 2022 10:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
