--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Miraculous Season 5</title>
+    <link rel="icon" type="image/x-icon" href="mlbu.png">
     <style>
         body{
             background-color:  aquamarine;
