--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <title>Miraculous Season 5</title>
-    <link rel="icon" type="image/x-icon" href="mlbu.png">
     <style>
         body{
             background-color:  aquamarine;
@@ -65,13 +64,13 @@
   <a href="datethingy.html">Calendar</a>
   <a href="MyTheories.html">My Theories</a>
 </div> 
-    <h2 style="color: blue">Determination Countdown TF1:</h2>
+    <h2 style="color: blue">Illusion Countdown TF1:</h2>
      <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Oct 28, 2022 10:30:00").getTime();
+var countDownDate = new Date("Nov 2, 2022 10:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -102,7 +101,7 @@ var x = setInterval(function() {
     <img src="hehhehehehehehehe.jpg" id="smallpictofillgap">
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
-        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Passion Teaser</p>
+        <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Reunion Teaser</p>
         <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="S5E07.html">Click for Trailer</a>
          </p>
         
