--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ var x = setInterval(function() {
     <section>
         <h2 id="LatestNews"> Latest News:</h2>
         <p id="TheNews" style="color: orange; font-size: 30px; font-family: cursive;">Reunion Teaser</p>
-        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="S5E07.html">Click for Trailer</a>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;"> <a href="TrailerMain.html">Click for Trailer</a>
          </p>
         
         </section>
