--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Miraculous Season 5</title>
     <style>
         body{
-            background-color:  aquamarine;
+            background-color:  deeppink;
             width: auto;
             height: auto;
 
