--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ var x = setInterval(function() {
     
     <a href="S5E07.html" id="E7"><img src="Ziggy_Square.webp" width="250px" height="255px"></a>
     <br><br>
-    <a href="S5E08.html" id="E8"><img src="NOIMAGE.png" width="250px" height="255px"></a>
+    <a href="S5E08.html" id="E8"><img src="JoanDArc.webp" width="250px" height="255px"></a>
     
     <a href="S5E09.html" id="E9"><img src="Roaar_Square.webp" width="250px" height="255px"></a>
    
