--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
       #demo{
             font-size: 35px;
-            color: red;
+            color: Cyan;
             font-weight: bold;
         }
         #LatestNews{
