--- a/datethingy.html
+++ b/datethingy.html
@@ -177,6 +177,14 @@
         type: "EnglishEpisode",
         color: "#ff00ff" // Event custom color (optional)
       },
+           {
+        name: "Elation Ep 9 ",
+        badge: "French Dub", // Event badge (optional)
+        date: ["November/03/2022", "November/03/2022"], // Date range
+        description: "Synopsis Not Yet Revealed", // Event description (optional)
+        type: "FrenchEpisode",
+        color: "#ff00ff" // Event custom color (optional)
+      },
            
     ]   
     })
