--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Miraculous Season 5</title>
     <style>
         body{
-            background-color:  deeppink;
+            background-color:  orange;
             width: auto;
             height: auto;
 
@@ -64,13 +64,13 @@
   <a href="datethingy.html">Calendar</a>
   <a href="MyTheories.html">My Theories</a>
 </div> 
-    <h2 style="color: blue">Elation Countdown TF1:</h2>
+    <h2 style="color: blue">Illusion Countdown USA:</h2>
      <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Nov 3, 2022 9:45:00").getTime();
+var countDownDate = new Date("Nov 5, 2022 15:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
