--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Miraculous Season 5</title>
     <style>
         body{
-            background-color:  orange;
+            background-color:  midnightblue;
             width: auto;
             height: auto;
 
         }
       #demo{
             font-size: 35px;
-            color: Cyan;
+            color: red;
             font-weight: bold;
         }
         #LatestNews{
@@ -64,13 +64,13 @@
   <a href="datethingy.html">Calendar</a>
   <a href="MyTheories.html">My Theories</a>
 </div> 
-    <h2 style="color: blue">Illusion Countdown USA:</h2>
+    <h2 style="color: blue">Determination Countdown USA:</h2>
      <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Nov 5, 2022 15:00:00").getTime();
+var countDownDate = new Date("Nov 12, 2022 15:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
