--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Miraculous Season 5</title>
     <style>
         body{
-            background-color:  floralwhite;
+            background-color:  firebrick;
             width: auto;
             height: auto;
 
         }
       #demo{
             font-size: 35px;
-            color: red;
+            color: rebeccapurple;
             font-weight: bold;
         }
         #LatestNews{
@@ -88,13 +88,13 @@
   <a href="datethingy.html">Calendar</a>
   <a href="MyTheories.html">My Theories</a>
 </div> 
-    <h2 style="color: blue">Passion Countdown USA:</h2>
+    <h2 style="color: blue">Perfection and Emotion Countdown Gloob:</h2>
      <!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Nov 19, 2022 15:30:00").getTime();
+var countDownDate = new Date("Nov 21, 2022 22:30:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
