--- a/MyTheories.html
+++ b/MyTheories.html
@@ -60,10 +60,12 @@
         <p id="p1">This Page is a page where i put my theories for future Season 5 episodes</p>
         <p id="p1">This page is completely free from any Show Bible and Leak Spoilers</p>
         <p id="p1">I haven't Read or Intend to Read the Show Bible and have stayed away for any leaks</p>
-        <p id="p1">I will also upload a Voice Version on My Youtube Channel (If I have the time)</p>
-        <p id="p1">If you want to stay updated with not only the site but the show Consider Signing Up for Alerts</p>
-        <iframe style="align-content: center" src="https://docs.google.com/forms/d/e/1FAIpQLSeXiAlhBA1BCOwVEB-DCJw-7SOi6XdFvxB638pY5DFP7-DU0w/viewform?embedded=true" width="300" height="300" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <p id="p1">If you click the <strong>Youtube</strong> Button Below you will be taken to my youtube channel else just scroll down to see my most recent videos</p>
+
         <a style="font-size: 25px; text-align: center; color: deepskyblue" href="https://www.youtube.com/channel/UC0Ii_ylBQ3HAI9DxoBjRljg">Youtube</a>
+        
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KSB26TRNTcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 
 </html>
