--- a/S5E05.html
+++ b/S5E05.html
@@ -50,8 +50,11 @@ var x = setInterval(function() {
 ;
 font-size: 55px ">Illusion
 </h1>
-    <h3>Trailer:</h3>
-    <h4><a href="https://www.youtube.com/watch?v=HhR4IunsWvE">Video Not found Click Link</a></h4>
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Even though Ladybug can no longer entrust him with a Miraculous, Nino wants to keep helping the superhero and Cat Noir. He decides to create a Resistance Network at school. The secret organization’s first mission is to figure out how Monarch’s new power works by deliberately triggering an akumatization. But the first members of the Resistance, Marinette, Adrien and Alya, are not convinced. Would Ladybug and Cat Noir agree with such a plan?</p>
+        <br>
+        </section>
     
 <a href="Index.html">Back to Home</a>    
     </body>
