--- a/S5E06.html
+++ b/S5E06.html
@@ -55,7 +55,11 @@ font-size: 55px ">Determination
     <source src="DeterminationTrailer1.mp4" >
     
     </video>
-    
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Marinette and Adrien wonder about their feelings. While Marinette tries to convince herself that she needs to stop being in love with Adrien because it diverts her from her role as a superhero, she discovers that she has feelings for another boy, who has changed a lot lastly... As for Adrien, he is becoming increasingly interested in Marinette. What if she were more than just a friend? He doesn’t know that, by inviting Marinette out, he is about to unleash a whirlwind of feelings that will change their lives...</p>
+        <br>
+        </section>
 <a href="Index.html">Back to Home</a>    
     </body>
 </html>
