--- a/S5E07.html
+++ b/S5E07.html
@@ -55,6 +55,12 @@ font-size: 55px ">Passion
     <source src="PassionTrailer1.mp4">
     </video>
     
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">As Marinette tries to convince herself that she loves Cat Noir to try and forget about Adrien, Adrien, who has given up on being in love with Ladybug, tries to find a way to declare his feelings to Marinette. As everything turns upside down in their lives, Ladybug and Cat Noir exchange their Miraculous to escape a ruthless villain. But the return of Mister Bug is about to make things even more confusing in Lady Noire’s heart.</p>
+        <br>
+        </section>
+    
 <a href="Index.html">Back to Home</a>    
     </body>
 </html>
