--- a/S5E08.html
+++ b/S5E08.html
@@ -49,7 +49,12 @@ var x = setInterval(function() {
   <h1 style="color:
 ;
 font-size: 55px ">Reunion
-</h1>  
+</h1>
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">While visiting the Louvre museum, Marinette makes a double discovery. First, she realizes that her friend Alix, whom she’s entrusted with the Rabbit Miraculous, has found a way to communicate with her loved ones without setting foot in the present. Second, Marinette learns that she herself can use her kwagatama to communicate with the Memories of the former Miraculous holders. Will this help her escape the trap that Monarch has set for her?</p>
+        <br>
+        </section>
     
     
 <a href="Index.html">Back to Home</a>    
