--- a/S5E09.html
+++ b/S5E09.html
@@ -51,10 +51,15 @@ var x = setInterval(function() {
 font-size: 55px ">Elation
 </h1>
     <h3>Trailer:</h3>
-    <video controls autoplay>
+    <video hidden controls autoplay>
     <source src="ElationMainTrailer.mp4">
     
     </video>
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">When Ladybug chases after Cat Noir, he runs away from her. When Adrien chases after Marinette, she runs away from him. Tikki and Alya grow increasingly concerned as they watch Marinette’s moves: is their friend looking for yet another excuse to run away from her feelings for Adrien, or is she really falling for another boy? When they cross paths with André the ice-cream maker – whose ice cream is supposed to know and reveal the mysteries of love – Marinette and Cat Noir make a chilling discovery that will freeze their hearts!</p>
+        <br>
+        </section>
     
 <a href="Index.html">Back to Home</a>    
     </body>
