--- a/S5E10.html
+++ b/S5E10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Transmition (The Kwami's Choice Part 1)</title>
+    <title>Transmission (The Kwami's Choice Part 1)</title>
     <style>
         body{
             background-color: mediumpurple;
@@ -16,10 +16,15 @@
 <body>
     <h1 style="color:white
 ;
-font-size: 55px ">Transmition
+font-size: 55px ">Transmission
 </h1>
     
     
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Tikki and Plagg are sad to see their carriers so sad to be forced to give up their feelings. The Kwamis will then make a radical choice that will change many things in Paris.</p>
+        <br>
+        </section>
 <a href="Index.html">Back to Home</a>    
     </body>
 </html>
