--- a/S5E19.html
+++ b/S5E19.html
@@ -19,6 +19,11 @@
 font-size: 55px ">Pretention
 </h1>
     
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Convinced that Gabriel’s coldness towards her stems from a misunderstanding, Marinette decides to have a heart-to-heart with the father of the boy she loves… and her outstanding courage inspires her friend Kagami! She too would love to open the door to her ever-commanding mom’s heart! Alas, the conversation comes to a sudden end when an unexpected guest returns and spirits Kagami away! Who is this mysterious guest? Will Ladybug and Cat Noir save Kagami? And will Marinette and Adrien ever have a chance to love each other freely?</p>
+        <br>
+        </section>
     
 <a href="Index.html">Back to Home</a>    
     </body>
