--- a/S5E20.html
+++ b/S5E20.html
@@ -10,6 +10,12 @@
 font-size: 55px ">Revelation
 </h1>  
     
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">Lila is an accomplished liar. This evil talent has allowed her to be loved by all, and even to be hired by Gabriel Agreste. But Marinette and Adrien’s growing closer pushes the boy’s father to name Kagami as the new face of his brand, enraging Lila. She uses an incident in class to call for new elections in order to replace Marinette as class representative. But the campaign goes wrong, much to Monarch’s delight. Thread lightly, for with Lila, things are more than often not what they seem…</p>
+        <br>
+        </section>
+    
 <a href="Index.html">Back to Home</a>    
     </body>
 </html>
