--- a/S5E03.html
+++ b/S5E03.html
@@ -52,6 +52,11 @@ var x = setInterval(function() {
 font-size: 55px ">Destruction
 </h1>
     
+    <section>
+        <p style="color: orange; font-size: 30px; font-family: cursive;">Synopsis</p>
+        <p style="color: rebeccapurple; font-size: 35px;font-family: monospace;">What if Ladybug’s worst nightmare came true? What if Monarch could force the kwamis who know Ladybug’s address to lead him to her? The unfortunate little creatures would have no choice but to obey him... And if Monarch showed up at Marinette Dupain-Cheng’s home, would she be able to escape him?</p>
+        <br>
+        </section>
     
 <a href="Index.html">Back to Home</a>    
     </body>
