--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@ background-color: aqua;
             font-size: 35px;
             color: red;
             font-weight: bold;
+            text-align: center;
         }
     #NameOfDub{
         font-size: 25px;
         color: purple
+            text-align: center;
     </style>
     </head>
 <body>
