--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ background-color: aqua;
         }
     #NameOfDub{
         font-size: 25px;
-        color: purple
-            text-align: center;
+        color: purple;
+         text-align: center;
     </style>
     </head>
 <body>
